[package]
name = "XDPainel"
version = "1.0.0"
edition = "2021"
authors = ["WestSideDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.24", features = ["blocking"]}
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }



